# Network_simulator

./: .gitignore  CMakeLists.txt  host.c  host.h  main.h  pDNSp.config  ring.config  switch.c
Lab05/: main.c  net.c  p2p2.config  switch.h
Lab07/: host.c  host.h  main.c  main.h  makefile  man.c  net.c  packet.c  packet.h  server.c  server.h  switch.c  switch.h
